# avi-maker

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: main.cpp
src/AVIMaker/: AVIMaker.cpp  AVIMaker.h
src/avi_lib/: avi_headers.hpp  avi_io.cpp  avi_rw.cpp  avi_rw.h
src/bmp_lib/: bmp.cpp  bmp.h  bmp_examples.cpp  bmp_headers.hpp  bmp_math.cpp  filter.cpp  filter.h
src/motion_compensation/: motion_compensation.cpp  motion_compensation.h
